<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2012 Eric H. Cloninger, dba PurpleFoto
 
Licensed under the Apache License, Version 2.0 (the "License"); you 
may not use this file except in compliance with the License. You may 
obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0 

Unless required by applicable law or agreed to in writing, software 
distributed under the License is distributed on an "AS IS" BASIS, 
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or 
implied. See the License for the specific language governing 
permissions and limitations under the License
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="confirm_exit"
        android:selectable="true"
        android:title="@string/confirm_exit_desc" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:enabled="true"
        android:key="clock_24_hour"
        android:selectable="true"
        android:title="@string/clock_24_hour_desc" />

    <ListPreference
        android:defaultValue="@string/default_units"
        android:enabled="true"
        android:entries="@array/units"
        android:entryValues="@array/units"
        android:key="speed_units"
        android:selectable="true"
        android:title="@string/units_label" />
    <ListPreference
        android:defaultValue="@string/default_color"
        android:enabled="true"
        android:entries="@array/colors_desc"
        android:entryValues="@array/colors_dont_localize"
        android:key="icon_color"
        android:selectable="true"
        android:title="@string/icon_color" />

</PreferenceScreen>